forms-flow-api/dhcho/dev/deployment_dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: form-flow-api
  namespace : forms-flow-api
  labels:
    app.kubernetes.io/name: formsflowapi
spec:
  replicas: 1
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: formsflowapi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: formsflowapi
    spec:
      imagePullSecrets:
        - name: private-registry
      containers:
        - name: formsflowapi
          image: sofiamunicipalitydigitall/forms-flow-api:latest
          lifecycle:
            postStart:
              exec:
                command: [ "/bin/sh", "-c",  "echo 'nameserver 8.8.8.8' >> /etc/resolv.conf && apt update && apt -y install cron vim  && env >> /etc/environment && crontab -l | { cat; echo '*/1 * * * * (FLASK_APP=/forms-flow-api/app/manage.py bash -c \"/venv/bin/flask cron expire-documents\") >> /var/log/expire_documents.log 2>&1'; echo '*/5 * * * * (FLASK_APP=/forms-flow-api/app/manage.py bash -c \"/venv/bin/flask cron delete-users\") >> /var/log/delete-users.log 2>&1'; echo '*/5 * * * * (FLASK [...]
          ports:
            - containerPort: 5000
              name: http-api
              protocol: TCP
          volumeMounts:
            - mountPath: /mnt/external-services/acstre/documents
              name: documents
            - name: firebase
              mountPath: /opt/keycloak/firebase
            - name: logs
              mountPath: /mnt/mobile/logs
      volumes:
        - name: documents
          nfs:
            path: /pvc/documents
            server: 172.23.230.140
        - name: firebase
          nfs:
            server: 172.23.230.140
            path: /pvc/keycloak/firebase
        - name: logs
          nfs:
            server: 172.23.230.140
            path: /pvc/logs
